--- a/ide/codetoolsdefpreview.lfm
+++ b/ide/codetoolsdefpreview.lfm
@@ -1,26 +1,27 @@
 object CodeToolsDefinesDialog: TCodeToolsDefinesDialog
   Caption = 'CodeToolsDefinesDialog'
   ClientHeight = 450
-  ClientWidth = 485
+  ClientWidth = 502
   OnClose = CodeToolsDefinesDialogCLOSE
   OnCreate = CodeToolsDefinesDialogCREATE
+  OnDestroy = FormDestroy
   PixelsPerInch = 112
-  HorzScrollBar.Page = 484
+  HorzScrollBar.Page = 501
   VertScrollBar.Page = 449
   Left = 423
   Height = 450
   Top = 228
-  Width = 485
+  Width = 502
   object DirectoryGroupbox: TGroupBox
     Align = alTop
     Caption = 'DirectoryGroupbox'
     ClientHeight = 31
-    ClientWidth = 481
+    ClientWidth = 498
     ParentCtl3D = False
     TabOrder = 0
     OnResize = DirectoryGroupboxRESIZE
     Height = 48
-    Width = 485
+    Width = 502
     object DirectoryCombobox: TComboBox
       AutoCompleteText = [cbactEndOfLineComplete, cbactSearchAscending]
       MaxLength = 0
@@ -45,26 +46,26 @@ object CodeToolsDefinesDialog: TCodeToolsDefinesDialog
     end
   end
   object ValuesListview: TListView
-    Align = alClient
+    Align = alLeft
     Columns = <>
     TabOrder = 1
     ViewStyle = vsReport
     OnSelectItem = ValuesListviewSELECTITEM
     Height = 271
     Top = 48
-    Width = 280
+    Width = 296
   end
   object ValueGroupbox: TGroupBox
     Align = alBottom
     Anchors = [akLeft, akBottom]
     Caption = 'Value'
     ClientHeight = 85
-    ClientWidth = 481
+    ClientWidth = 498
     ParentCtl3D = False
     TabOrder = 2
     Height = 102
     Top = 319
-    Width = 485
+    Width = 502
     object ValueSynedit: TSynEdit
       Align = alBottom
       Font.Height = -15
@@ -74,9 +75,11 @@ object CodeToolsDefinesDialog: TCodeToolsDefinesDialog
       ParentColor = False
       ParentCtl3D = False
       TabOrder = 0
-      Width = 481
+      Width = 498
       BookMarkOptions.Xoffset = -18
+      BookMarkOptions.OnChange = nil
       Gutter.Visible = False
+      Gutter.OnChange = nil
       Gutter.CodeFoldingWidth = 14
       Keystrokes = <      
         item
@@ -404,9 +407,10 @@ object CodeToolsDefinesDialog: TCodeToolsDefinesDialog
       )
       Options = [eoAutoIndent, eoDragDropEditing, eoScrollPastEol, eoShowScrollHint, eoSmartTabs, eoTabsToSpaces, eoTrimTrailingSpaces, eoBracketHighlight, eoShowCtrlMouseLinks]
       ReadOnly = True
+      SelectedColor.OnChange = nil
       Cursor = crIBeam
       Height = 85
-      Width = 481
+      Width = 498
     end
   end
   object CloseButton: TButton
@@ -418,26 +422,55 @@ object CodeToolsDefinesDialog: TCodeToolsDefinesDialog
     TabOrder = 3
     Height = 29
     Top = 421
-    Width = 485
+    Width = 502
   end
   object MainSplitter: TSplitter
-    Align = alRight
     Height = 271
     Width = 4
-    ResizeAnchor = akRight
     Cursor = crHSplit
-    Left = 280
+    Left = 296
     Height = 271
     Top = 48
     Width = 4
   end
-  object ParsedTemplatesTreeView: TTreeView
-    Align = alRight
-    DefaultItemHeight = 14
+  object TemplatesGroupBox: TGroupBox
+    Align = alClient
+    Caption = 'TemplatesGroupBox'
+    ClientHeight = 254
+    ClientWidth = 198
     TabOrder = 4
-    Left = 285
+    Left = 300
     Height = 271
     Top = 48
-    Width = 200
+    Width = 202
+    object ParsedTemplatesTreeView: TTreeView
+      Align = alTop
+      DefaultItemHeight = 14
+      TabOrder = 0
+      OnSelectionChanged = ParsedTemplatesTreeViewSelectionChanged
+      Height = 122
+      Width = 198
+    end
+    object TemplatesSplitter: TSplitter
+      Align = alTop
+      Cursor = crVSplit
+      Height = 5
+      Width = 198
+      ResizeAnchor = akTop
+      Cursor = crVSplit
+      Height = 5
+      Top = 122
+      Width = 198
+    end
+    object TemplatesMemo: TMemo
+      Align = alClient
+      Lines.Strings = (
+        'Memo1'
+      )
+      TabOrder = 1
+      Height = 127
+      Top = 127
+      Width = 198
+    end
   end
 end
