--- a/ide/frmsearch.lfm
+++ b/ide/frmsearch.lfm
@@ -6,7 +6,7 @@ object SearchForm: TSearchForm
   OnCreate = SearchFormCREATE
   OnDestroy = SearchFormDESTROY
   ParentFont = True
-  PixelsPerInch = 96
+  PixelsPerInch = 112
   Position = poOwnerFormCenter
   HorzScrollBar.Page = 427
   VertScrollBar.Page = 148
@@ -16,7 +16,6 @@ object SearchForm: TSearchForm
   Width = 428
   object Panel2: TPanel
     Align = alClient
-    BorderSpacing.OnChange = nil
     BevelInner = bvLowered
     ClientHeight = 149
     ClientWidth = 428
@@ -27,51 +26,51 @@ object SearchForm: TSearchForm
     Height = 149
     Width = 428
     object lblMatches: TLabel
-      BorderSpacing.OnChange = nil
       Color = clNone
+      ParentColor = False
       Left = 96
       Height = 17
       Top = 80
       Width = 321
     end
     object MatchesLabel: TLabel
-      BorderSpacing.OnChange = nil
       Caption = 'Matches'
       Color = clNone
+      ParentColor = False
       Left = 16
       Height = 17
       Top = 80
       Width = 64
     end
     object lblProgress: TLabel
-      BorderSpacing.OnChange = nil
       Color = clNone
+      ParentColor = False
       Left = 96
       Height = 17
       Top = 48
       Width = 320
     end
     object SearchingLabel: TLabel
-      BorderSpacing.OnChange = nil
       Caption = 'Searching:'
       Color = clNone
+      ParentColor = False
       Left = 16
       Height = 17
       Top = 48
       Width = 64
     end
     object SearchTextLabel: TLabel
-      BorderSpacing.OnChange = nil
       Caption = 'Search Text:'
       Color = clNone
+      ParentColor = False
       Left = 16
       Height = 17
       Top = 16
       Width = 80
     end
     object lblSearchText: TLabel
-      BorderSpacing.OnChange = nil
       Color = clNone
+      ParentColor = False
       Left = 96
       Height = 17
       Top = 16
@@ -79,7 +78,7 @@ object SearchForm: TSearchForm
     end
     object btnCancel: TButton
       AutoSize = True
-      BorderSpacing.OnChange = nil
+      BorderSpacing.InnerBorder = 2
       Caption = 'Cancel'
       Default = True
       OnClick = btnAbortCLICK
