--- a/designer/anchoreditor.lfm
+++ b/designer/anchoreditor.lfm
@@ -7,7 +7,7 @@ object AnchorDesigner: TAnchorDesigner
   OnCreate = AnchorDesignerCreate
   OnDestroy = AnchorDesignerDestroy
   OnShow = AnchorDesignerShow
-  PixelsPerInch = 96
+  PixelsPerInch = 112
   Position = poScreenCenter
   HorzScrollBar.Page = 519
   VertScrollBar.Page = 258
@@ -18,7 +18,7 @@ object AnchorDesigner: TAnchorDesigner
   object BorderSpaceGroupBox: TGroupBox
     Anchors = [akTop, akLeft, akBottom]
     Caption = 'BorderSpaceGroupBox'
-    ClientHeight = 86
+    ClientHeight = 87
     ClientWidth = 168
     TabOrder = 0
     Left = 172
@@ -30,6 +30,7 @@ object AnchorDesigner: TAnchorDesigner
       ParentShowHint = False
       ShowHint = True
       TabOrder = 0
+      Value = 1
       Height = 20
       Top = 30
       Width = 56
@@ -39,6 +40,7 @@ object AnchorDesigner: TAnchorDesigner
       ParentShowHint = False
       ShowHint = True
       TabOrder = 1
+      Value = 1
       Left = 118
       Height = 20
       Top = 30
@@ -49,6 +51,7 @@ object AnchorDesigner: TAnchorDesigner
       ParentShowHint = False
       ShowHint = True
       TabOrder = 2
+      Value = 1
       Left = 58
       Height = 20
       Width = 56
@@ -58,6 +61,7 @@ object AnchorDesigner: TAnchorDesigner
       ParentShowHint = False
       ShowHint = True
       TabOrder = 3
+      Value = 1
       Left = 58
       Height = 20
       Top = 57
@@ -68,6 +72,7 @@ object AnchorDesigner: TAnchorDesigner
       ParentShowHint = False
       ShowHint = True
       TabOrder = 4
+      Value = 1
       Left = 58
       Height = 20
       Top = 30
@@ -77,7 +82,7 @@ object AnchorDesigner: TAnchorDesigner
   object TopGroupBox: TGroupBox
     Anchors = [akTop, akLeft, akRight]
     Caption = 'TopGroupBox'
-    ClientHeight = 32
+    ClientHeight = 33
     ClientWidth = 404
     TabOrder = 1
     Left = 64
@@ -85,8 +90,10 @@ object AnchorDesigner: TAnchorDesigner
     Width = 408
     object TopRefTopSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
+      Color = clBtnFace
       GroupIndex = 1
       NumGlyphs = 0
+      Transparent = False
       OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
@@ -96,8 +103,10 @@ object AnchorDesigner: TAnchorDesigner
     end
     object TopRefBottomSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
+      Color = clBtnFace
       GroupIndex = 1
       NumGlyphs = 0
+      Transparent = False
       OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
@@ -107,8 +116,10 @@ object AnchorDesigner: TAnchorDesigner
     end
     object TopRefCenterSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
+      Color = clBtnFace
       GroupIndex = 1
       NumGlyphs = 0
+      Transparent = False
       OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
@@ -151,7 +162,7 @@ object AnchorDesigner: TAnchorDesigner
   object BottomGroupBox: TGroupBox
     Anchors = [akLeft, akRight, akBottom]
     Caption = 'BottomGroupBox'
-    ClientHeight = 32
+    ClientHeight = 33
     ClientWidth = 404
     TabOrder = 2
     Left = 64
@@ -160,8 +171,10 @@ object AnchorDesigner: TAnchorDesigner
     Width = 408
     object BottomRefTopSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
+      Color = clBtnFace
       GroupIndex = 3
       NumGlyphs = 0
+      Transparent = False
       OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
@@ -171,8 +184,10 @@ object AnchorDesigner: TAnchorDesigner
     end
     object BottomRefBottomSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
+      Color = clBtnFace
       GroupIndex = 3
       NumGlyphs = 0
+      Transparent = False
       OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
@@ -182,8 +197,10 @@ object AnchorDesigner: TAnchorDesigner
     end
     object BottomRefCenterSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
+      Color = clBtnFace
       GroupIndex = 3
       NumGlyphs = 0
+      Transparent = False
       OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
@@ -226,7 +243,7 @@ object AnchorDesigner: TAnchorDesigner
   object RightGroupBox: TGroupBox
     Anchors = [akTop, akLeft, akBottom]
     Caption = 'RightGroupBox'
-    ClientHeight = 111
+    ClientHeight = 112
     ClientWidth = 146
     TabOrder = 3
     Left = 364
@@ -234,8 +251,10 @@ object AnchorDesigner: TAnchorDesigner
     Top = 64
     Width = 150
     object RightRefLeftSpeedButton: TSpeedButton
+      Color = clBtnFace
       GroupIndex = 4
       NumGlyphs = 0
+      Transparent = False
       OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
@@ -245,8 +264,10 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object RightRefRightSpeedButton: TSpeedButton
+      Color = clBtnFace
       GroupIndex = 4
       NumGlyphs = 0
+      Transparent = False
       OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
@@ -256,8 +277,10 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object RightRefCenterSpeedButton: TSpeedButton
+      Color = clBtnFace
       GroupIndex = 4
       NumGlyphs = 0
+      Transparent = False
       OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
@@ -302,7 +325,7 @@ object AnchorDesigner: TAnchorDesigner
   object LeftGroupBox: TGroupBox
     Anchors = [akTop, akLeft, akBottom]
     Caption = 'LeftGroupBox'
-    ClientHeight = 111
+    ClientHeight = 112
     ClientWidth = 146
     TabOrder = 4
     Left = 8
@@ -310,8 +333,10 @@ object AnchorDesigner: TAnchorDesigner
     Top = 64
     Width = 150
     object LeftRefLeftSpeedButton: TSpeedButton
+      Color = clBtnFace
       GroupIndex = 2
       NumGlyphs = 0
+      Transparent = False
       OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
@@ -321,8 +346,10 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object LeftRefRightSpeedButton: TSpeedButton
+      Color = clBtnFace
       GroupIndex = 2
       NumGlyphs = 0
+      Transparent = False
       OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
@@ -332,8 +359,10 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object LeftRefCenterSpeedButton: TSpeedButton
+      Color = clBtnFace
       GroupIndex = 2
       NumGlyphs = 0
+      Transparent = False
       OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
