--- a/ide/idecontexthelpedit.lfm
+++ b/ide/idecontexthelpedit.lfm
@@ -9,6 +9,7 @@ object ContextHelpEditorDlg: TContextHelpEditorDlg
   ClientWidth = 619
   OnClose = FormClose
   OnCreate = FormCreate
+  OnDestroy = FormDestroy
   PixelsPerInch = 112
   HorzScrollBar.Page = 618
   VertScrollBar.Page = 502
@@ -37,6 +38,7 @@ object ContextHelpEditorDlg: TContextHelpEditorDlg
       Align = alBottom
       BorderSpacing.InnerBorder = 2
       Caption = 'CreateHelpNodeForControlButton'
+      OnClick = CreateHelpNodeForControlButtonClick
       TabOrder = 1
       Height = 35
       Top = 358
@@ -46,6 +48,7 @@ object ContextHelpEditorDlg: TContextHelpEditorDlg
       Align = alBottom
       BorderSpacing.InnerBorder = 2
       Caption = 'TestButton'
+      OnClick = TestButtonClick
       TabOrder = 2
       Height = 35
       Top = 393
@@ -99,6 +102,7 @@ object ContextHelpEditorDlg: TContextHelpEditorDlg
       end
       object NodeHasHelpCheckBox: TCheckBox
         Caption = 'NodeHasHelpCheckBox'
+        OnEditingDone = NodeHasHelpCheckBoxEditingDone
         TabOrder = 0
         Left = 6
         Height = 24
@@ -106,6 +110,7 @@ object ContextHelpEditorDlg: TContextHelpEditorDlg
         Width = 162
       end
       object NodeNameEdit: TEdit
+        OnEditingDone = NodeNameEditEditingDone
         TabOrder = 1
         Text = 'NodeNameEdit'
         Left = 70
@@ -114,6 +119,7 @@ object ContextHelpEditorDlg: TContextHelpEditorDlg
         Width = 204
       end
       object NodePathEdit: TEdit
+        OnEditingDone = NodePathEditEditingDone
         TabOrder = 2
         Text = 'NodePathEdit'
         Left = 70
@@ -165,6 +171,7 @@ object ContextHelpEditorDlg: TContextHelpEditorDlg
       Caption = 'OkBitBtn'
       ModalResult = 1
       NumGlyphs = 0
+      OnClick = OkBitBtnClick
       TabOrder = 1
       Left = 370
       Height = 28
